lostCTRL/force-app/main/default/objects/OrderProduct__c/OrderProduct__c.object-meta.xml
<CustomObject>
    <label>OrderProduct</label>
    <nameField>
        <displayFormat>O-{0000}</displayFormat>
        <label>OrderProduct Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OrderProduct</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>