lostCTRL/force-app/main/default/objects/OrderProduct__c/fields/Adress__c.field-meta.xml
<CustomField>
    <fullName>Adress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Adress</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>OrderProduct</relationshipLabel>
    <relationshipName>OrderProduct</relationshipName>
    <type>Lookup</type>
</CustomField>