lostCTRL/force-app/main/default/objects/OrderProduct__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>OrderProduct</relationshipLabel>
    <relationshipName>OrderProduct</relationshipName>
    <type>Lookup</type>
</CustomField>