lostCTRL/force-app/main/default/objects/OrderProduct__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
                <default>true</default>
                <label>Paid</label>
            </value>
            <value>
                <fullName>In shipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>